# Modeling_dynamics_of_financial_market

./: .gitignore  .pre-commit-config.yaml  Exercises_with_Solns_PCA.aux  Exercises_with_Solns_PCA.tex  README.md  pyproject.toml
Exercise/E01_MultivariateTimeSeriesModelling/Data/: y_ecb_2004_2020_d.csv
Exercise/E01_MultivariateTimeSeriesModelling/Notebook/: Helper_PCA.ipynb  Solution_Task_VAR_IRF.ipynb  Task_VAR_IRF.ipynb
Exercise/E02_Dynamic_Vol_Modeling/Data/: timeseries.csv
Exercise/E02_Dynamic_Vol_Modeling/Notebook/: Helper_TestingForARCHEffects.ipynb  Solution_ARCH_GARCH.ipynb  Solution_SVM.ipynb  Task_ARCH_GARCH.ipynb  Task_SVM.ipynb
Exercise/E03_HandlingBigData/Notebook/: Helper_ECBDataCleaning.ipynb  Helper_PCA.ipynb  Solution_PCA_BondYields.ipynb  Solution_PCA_HelperFunction.ipynb  Task_PCA_BondYields.ipynb  Task_PCA_HelperFunction.ipynb
Exercise/E04_FactorInvesting/Notebook/: Solution_FamaMacBeth.ipynb  Task_FamaMacBeth.ipynb
Exercise/E04_FactorInvesting/data/: FF5_d.csv
Exercise/E05_KalmanFilter/Notebook/: CodeSnippet_Tracking_a_Friend.ipynb  Solution_KF1d_EquityPremium.ipynb  Solution_KF_Recursions_LGSSM_1dm.ipynb  Task_KF1d_EquityPremium.ipynb  Task_KF_Recursions_LGSSM_1dm.ipynb
